fixed buttons missing on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -360,6 +360,7 @@ p {
   width: 50%;
   height: 80%;
   top: 10%;
+  z-index: 20;
 }
 
 .nextButton {
